# autonomous-two-wheeled-robot

./: .gitignore  BUILD_LOG.md  GITHUB_SETUP.md  README.md
config/: nav2_params.yaml  slam_params.yaml
docs/: balancing_milestone.md  dev_environment_setup.md  run_balancer.md  run_sim.md  simulation_milestone.md  slam_nav2_milestone.md  spinning_vl53l1x_lidar_build_guide.md  tutorial_01_first_package.md  wheeled_autonomous_robot_plan.md  wheeled_robot_systems_deep_dive.md
firmware/esp32_motor_controller/: README.md
hardware/: BOM.md  shopping_list.md  wiring.md
launch/: craig2_sim.launch.py  craig_sim.launch.py
ros2_ws/: README.md
ros2_ws/src/robot_intro/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_intro/robot_intro/: balance_controller.py  go_to_goal.py  my_first_node.py  scan_gate.py  speed_ramp.py  turtle_driver.py  velocity_listener.py  wall_avoider.py  wall_avoider_proportional.py
scripts/: README.md  bridge.sh  controller.sh  nav2.sh  reset_craig.sh  sim.sh  slam.sh  state_pub.sh
urdf/: README.md  balancer.urdf  my_robot.urdf  test_diffdrive.urdf
worlds/: balance_world.sdf  sensor_world.sdf
