<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_intro</name>
  <version>0.0.1</version>
  <description>My first ROS 2 package: a node that drives the turtle (and one day, the real rover).</description>
  <maintainer email="ultradshxpa@gmail.com">viktor</maintainer>
  <license>MIT</license>

  <!-- Code dependencies: the libraries our nodes import -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>turtlesim</exec_depend>

  <!-- Test tooling (auto-added by ros2 pkg create) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
